--- a/game/src/app/views/preGame/styles.module.scss
+++ b/game/src/app/views/preGame/styles.module.scss
@@ -62,3 +62,15 @@
     margin: 20px;
     padding: 5px;
 }
+
+.loadingScreen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.loadingLabel {
+    margin: 150px;
+}
