--- a/packages/game/src/app/views/gameBoard/components/endTurnButton/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/endTurnButton/styles.module.scss
@@ -1,4 +1,4 @@
-%player {
+.onTurn {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,53 +16,30 @@
     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc635', endColorstr='#c0ea67', GradientType=1);
     /* IE6-9 fallback on horizontal gradient */
-    position: relative;
-}
-
-.you {
-    @extend %player;
-}
-
-.oponent {
-    @extend %player;
-}
-
-.canBeTargeted {
-    border: solid;
-    border-color: gold;
-
-    &:hover {
-        border-color: black;
-    }
-}
-
-.stats {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px;
-    width: 104px;
+    right: 0;
+    top: 42%;
     position: absolute;
-    bottom: 0;
 }
 
-.selected {
-    background: rgba(0, 0, 200, 1);
-    /* Old browsers */
-    background: -moz-linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-
-    &:hover {
-        border: none;
-    }
-}
-
-.container {
-    align-items: center;
+.offTurn {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    background-color: beige;
-    height: 160px;
+    height: 120px;
+    width: 120px;
+    border-radius: 15px;
+    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
+    background: rgba(100, 100, 100, 1);
+    /* Old browsers */
+    background: -moz-linear-gradient(45deg, rgba(100, 100, 100, 1) 0%, rgba(100, 100, 100, 1) 99%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(45deg, rgba(100, 100, 100, 1) 0%, rgba(100, 100, 100, 1) 99%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(45deg, rgba(100, 100, 100, 1) 0%, rgba(100, 100, 100, 1) 99%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc635', endColorstr='#c0ea67', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    right: 0;
+    top: 42%;
+    position: absolute;
 }
