--- a/packages/game/src/app/views/gameBoard/components/battlefield/components/minion/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/battlefield/components/minion/styles.module.scss
@@ -1,64 +1,69 @@
-.minion {
+.minionContainer {
+    width: 150px;
+    height: 150px;
+    background: #232323;
+    border-radius: 20px;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.name {
+    color: white;
+    padding: 15px;
+}
+
+.photo {
+    background: wheat;
+    height: 45%;
+    width: 100%;
+}
+
+.dataContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    height: 120px;
-    width: 120px;
-    border-radius: 15px;
-    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
-    background: rgba(200, 0, 0, 1);
-    /* Old browsers */
-    background: -moz-linear-gradient(45deg, rgba(200, 0, 0, 1) 0%, rgba(240, 0, 0, 1) 99%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(200, 0, 0, 1) 0%, rgba(240, 0, 0, 1) 99%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, rgba(200, 0, 0, 1) 0%, rgba(240, 0, 0, 1) 99%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc635', endColorstr='#c0ea67', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
-    position: relative;
 }
 
-.canAttack {
-    border: solid;
-    border-color: gold;
-
-    &:hover {
-        border-color: black;
-    }
+.text {
+    color: white;
+    padding: 15px;
 }
 
+.canPlayCard {
+    box-shadow: gold 0px 19px 38px, gold 0px 15px 12px;
+}
+
+.isDragging {
+    display: none;
+}
 
 .stats {
     display: flex;
-    justify-content: space-between;
-    padding: 8px;
-    width: 104px;
-    position: absolute;
-    bottom: 0;
+    flex-direction: row;
+    height: 30px;
+    width: 100%;
 }
 
-.selected {
-    background: rgba(0, 0, 200, 1);
-    /* Old browsers */
-    background: -moz-linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-
-    border: none;
+%stat {
+    align-items: center;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    font-size: 25px;
+    border-radius: 5px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    margin: 3px
 }
 
-.enemyMinion {
-    margin: 0 10px;
+.attack {
+    @extend %stat;
+    background: #2196f3
 }
 
-.canBeTargeted {
-    border: solid;
-    border-color: gold;
-
-    &:hover {
-        border-color: black;
-    }
+.health {
+    @extend %stat;
+    background: #e91e63;
 }
