--- a/packages/game/src/app/views/gameBoard/components/battlefield/components/SpaceBetween/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/battlefield/components/SpaceBetween/styles.module.scss
@@ -1,107 +1,19 @@
-%minion {
-    color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 120px;
-    width: 120px;
-    flex-grow: none;
-    margin: 0 10px;
-    border-radius: 15px;
-    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
-    background: rgba(50, 50, 50, 1);
-    /* Old browsers */
-    background: -moz-linear-gradient(45deg, rgba(50, 50, 50, 1) 0%, rgba(240, 0, 0, 1) 99%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(50, 50, 50, 1) 0%, rgba(50, 50, 50, 1) 99%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, rgba(50, 50, 50, 1) 0%, rgba(50, 50, 50, 1) 99%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc635', endColorstr='#c0ea67', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
-    position: relative;
-}
-
-.noSelected {
-    height: 120px;
-    width: 20px;
-    background: red;
-}
-
-
 .center {
+    height: 175px;
+    margin: 0 -75px;
+    width: 170px;
+    z-index: 0;
+
+    &:active {
+        pointer-events: none;
+    }
+}
+
+.expand {
+    width: 270px;
+}
+
+.border {
+    flex-grow: 1;
     height: 120px;
-    width: 20px;
-
-    &>.minion {
-        color: transparent;
-        background-color: transparent;
-    }
-
-    &:hover {
-        width: 140px;
-
-        &>.minion {
-            @extend %minion;
-        }
-    }
-}
-
-.left {
-    display: flex;
-    height: 120px;
-    justify-content: flex-end;
-    width: 200px;
-
-    &>.minion {
-        color: transparent;
-        background-color: transparent;
-    }
-
-    &:hover {
-
-        &>.minion {
-            @extend %minion;
-        }
-    }
-}
-
-.right {
-    height: 120px;
-    width: 200px;
-
-    &>.minion {
-        color: transparent;
-        background-color: transparent;
-    }
-
-    &:hover {
-
-        &>.minion {
-            @extend %minion;
-        }
-    }
-}
-
-.stats {
-    display: flex;
-    justify-content: space-between;
-    padding: 8px;
-    width: 104px;
-    position: absolute;
-    bottom: 0;
-}
-
-.selected {
-    background: rgba(0, 0, 200, 1);
-    /* Old browsers */
-    background: -moz-linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, rgba(0, 0, 200, 1) 0%, rgba(0, 0, 240, 1) 99%);
-
-    &:hover {
-        border: none;
-    }
 }
