--- a/packages/game/src/app/views/gameBoard/components/battlefield/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/battlefield/styles.module.scss
@@ -5,9 +5,11 @@
     height: 160px;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
 }
 
 .container {
     display: flex;
     align-items: center;
+    background-color: #f7c564;
 }
