--- a/packages/game/src/app/views/gameBoard/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/styles.module.scss
@@ -1,6 +1,6 @@
 .GameBoard {
     background-color: #aaaaaa;
-   
+
     height: 100vh;
     width: 100%;
 }
@@ -9,7 +9,8 @@
     background-color: aqua;
 }
 
-.container{
+.container {
+    align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
