--- a/packages/game/src/app/views/gameBoard/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/styles.module.scss
@@ -2,14 +2,15 @@
     background-color: #aaaaaa;
 
     height: 100vh;
-    width: 100%;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .Button {
     background-color: aqua;
 }
 
-.container {
+.playersAndBattlefields {
     align-items: center;
     display: flex;
     flex-direction: column;
