--- a/packages/game/src/app/views/gameBoard/components/battlefield/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/battlefield/styles.module.scss
@@ -1,14 +1,15 @@
 .battlefield {
     align-items: center;
     background-color: #f7c564;
-    display: flex;
-    height: 160px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;display: flex;
     flex-direction: row;
+    height: 180px;
     justify-content: center;
     width: 100%;
 }
 
 .container {
-    display: flex;
     align-items: center;
+    display: flex;
 }
