--- a/packages/game/src/app/views/gameBoard/components/hand/components/oponentCard/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/hand/components/oponentCard/styles.module.scss
@@ -1,21 +1,18 @@
-.card {
+.cardContainer {  
+    background: #232323;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 1) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     display: flex;
     flex-direction: column;
+    height: 240px;
     justify-content: center;
-    height: 120px;
-    width: 120px;
-    margin: 10px;
-    border-radius: 15px;
-    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.3);
-    background: rgb(155, 198, 53);
-    /* Old browsers */
-    background: -moz-linear-gradient(45deg, rgba(155, 198, 53, 1) 0%, rgba(192, 234, 103, 1) 99%);
-    /* FF3.6-15 */
-    background: -webkit-linear-gradient(45deg, rgba(155, 198, 53, 1) 0%, rgba(192, 234, 103, 1) 99%);
-    /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(45deg, rgba(155, 198, 53, 1) 0%, rgba(192, 234, 103, 1) 99%);
-    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#9bc635', endColorstr='#c0ea67', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
-    position: relative;
-}
+    align-items: center;
+    overflow: hidden;
+    width: 172px;
+  }
+
+  .label{
+    color: white;
+    font-size: 25px;
+    width: 90%;
+  }
