--- a/packages/game/src/app/views/gameBoard/components/hand/styles.module.scss
+++ b/packages/game/src/app/views/gameBoard/components/hand/styles.module.scss
@@ -9,3 +9,15 @@
     bottom: 0;
     width: 100%;
 }
+
+.oponentHand {
+    align-items: flex-start;
+    display: flex;
+    height: 300px;
+    flex-direction: row;
+    justify-content: center;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
